# anonimizator3000

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/anonimizator3000/: __init__.py  config.py  jobs.py  main.py  processor.py  upload.py
src/anonimizator3000/static/: app.css
src/anonimizator3000/templates/: index.html
src/anonimizator3000/templates/partials/: error.html  job.html
tests/: test_app.py  test_jobs.py  test_output_documents.py
